--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/Books.jpg"class="d-block w-100" alt="Books">
+      <img src="images/Insight.jpg" class="d-block w-100" alt="Books">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
