--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Images/leadership.jpg" class="d-block w-100" alt="Leadership">
+      <img src="images/leadership.jpg" class="d-block w-100" alt="Leadership">
       <div class="carousel-caption d-none d-md-block">
 
       </div>
