--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
@@ -127,19 +127,19 @@
 
   <div class="col-md-3">
   <h3>Team Managemnt</h3>
-  <img class="leadership-image"src="images/team-image.jpg" alt="Team image">
+  <img class="leadership-image"src="images/Team-image.jpg" alt="Team image">
   <p>Team is asset and we have to keep them up and encourge them all the way</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
@@ -163,19 +163,19 @@
 
     <div class="col-md-3">
     <h3>Team Managemnt</h3>
-    <img class="leadership-image"src="images/team-image.jpg" alt="Team image">
+    <img class="leadership-image"src="images/Team-image.jpg" alt="Team image">
     <p>Team is asset and we have to keep them up and encourge them all the way</p>
     </div>
 
     <div class="col-md-3">
     <h3>Technology</h3>
-    <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+    <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
     <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
     </div>
 
     <div class="col-md-3">
     <h3>Technology</h3>
-    <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+    <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
     <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
     </div>
 
@@ -192,19 +192,19 @@
 
     <div class="col-md-3">
     <h3>Team Managemnt</h3>
-    <img class="leadership-image"src="images/team-image.jpg" alt="Team image">
+    <img class="leadership-image"src="images/Team-image.jpg" alt="Team image">
     <p>Team is asset and we have to keep them up and encourge them all the way</p>
     </div>
 
     <div class="col-md-3">
     <h3>Technology</h3>
-    <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+    <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
     <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
     </div>
 
     <div class="col-md-3">
     <h3>Technology</h3>
-    <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+    <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
     <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
     </div>
 
@@ -226,19 +226,19 @@
 
   <div class="col-md-3">
   <h3>Team Managemnt</h3>
-  <img class="leadership-image"src="images/team-image.jpg" alt="Team image">
+  <img class="leadership-image"src="images/Team-image.jpg" alt="Team image">
   <p>Team is asset and we have to keep them up and encourge them all the way</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
@@ -255,19 +255,19 @@
 
   <div class="col-md-3">
   <h3>Team Managemnt</h3>
-  <img class="leadership-image"src="images/team-image.jpg" alt="Team image">
+  <img class="leadership-image"src="images/Team-image.jpg" alt="Team image">
   <p>Team is asset and we have to keep them up and encourge them all the way</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
@@ -288,13 +288,13 @@
 
   <div class="col-md-3">
   <h3>Team Managemnt</h3>
-  <img class="leadership-image"src="images/team-image.jpg" alt="Team image">
+  <img class="leadership-image"src="images/Team-image.jpg" alt="Team image">
   <p>Team is asset and we have to keep them up and encourge them all the way</p>
   </div>
 
   <div class="col-md-3">
   <h3>Technology</h3>
-  <img class="leadership-image"src="images/tech.jpg" alt="Tech image">
+  <img class="leadership-image"src="images/Tech.jpg" alt="Tech image">
   <p>Technology is changing our world and we have lack in talents how comoanies can adress</p>
   </div>
 
